--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ frontend/node_modules/
 frontend/build/
 frontend/dist/
 frontend/.env
+
+# Vercel deployment files
+.vercel/
+backend/.vercel/
+frontend/.vercel/
