--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,10 @@ dist/
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
+.env*.local
 
 # Logs
 npm-debug.log*
@@ -76,9 +77,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env*
-
 # IDE files
 .vscode/
 .idea/
@@ -94,7 +92,6 @@ Thumbs.db
 
 # Backend specific
 backend/node_modules/
-backend/.env
 backend/logs/
 backend/*.log
 
@@ -102,9 +99,11 @@ backend/*.log
 frontend/node_modules/
 frontend/build/
 frontend/dist/
-frontend/.env
 
 # Vercel deployment files
 .vercel/
 backend/.vercel/
 frontend/.vercel/
+
+# But allow example files
+!*.example
