Fix Vercel deployment issues - move vite to root dependencies and add root vercel.json for static build

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   ],
   "author": "Chiranjeevi",
   "license": "MIT",
+  "dependencies": {
+    "vite": "^4.2.0"
+  },
   "devDependencies": {
     "concurrently": "^8.0.0"
   }
