--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ dist/
 .env.test
 .env.production
 .env*.local
+.env.*
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # Logs
 npm-debug.log*
