--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,8 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: npm start
-    rootDir: backend
+    startCommand: node index.js
     envVars:
       - key: NODE_ENV
         value: production
