--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: cd backend ; npm install
-    startCommand: cd backend ; npm start
+    startCommand: node index.js
     envVars:
       - key: NODE_ENV
         value: production
