--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mern-role-dashboard-backend
     env: node
     plan: free
-    buildCommand: cd backend ; npm install
+    buildCommand: cd backend && npm ci
     startCommand: node index.js
     envVars:
       - key: NODE_ENV
