--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "mern-role-based-dashboard",
   "version": "1.0.0",
   "description": "A MERN stack application with role-based access control for managing students and user authentication",
-  "main": "backend/server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "start": "node backend/server.js",
+    "start": "node index.js",
+    "backend": "npm start --prefix backend",
+    "frontend": "npm run dev --prefix frontend",
     "build": "npm run build --prefix frontend",
     "test": "concurrently \"npm test --prefix backend\" \"npm test --prefix frontend\"",
-    "install-all": "concurrently \"npm install --prefix backend\" \"npm install --prefix frontend\""
+    "install-all": "concurrently \"npm install --prefix backend\" \"npm install --prefix frontend\"",
+    "postinstall": "cd backend && npm install"
   },
   "keywords": [
     "MERN",
@@ -23,5 +26,13 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "mongoose": "^7.0.3",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
