--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: mern-role-dashboard-backend
     env: node
     plan: free
-    buildCommand: cd backend && npm ci
-    startCommand: node index.js
+    buildCommand: npm ci
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
