--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "backend": "npm start --prefix backend",
     "frontend": "npm run dev --prefix frontend",
     "build": "npm run build --prefix frontend",
+    "build:full": "npm run build --prefix frontend && npm run start",
     "test": "concurrently \"npm test --prefix backend\" \"npm test --prefix frontend\"",
     "install-all": "concurrently \"npm install --prefix backend\" \"npm install --prefix frontend\"",
-    "postinstall": "cd backend && npm install"
+    "postinstall": "cd backend && npm install && cd ../frontend && npm install"
   },
   "keywords": [
     "MERN",
