--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
-  "outputDirectory": "dist",
+  "outputDirectory": "public",
   "builds": [
     {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "public"
       }
     }
   ],
