--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node index.js",
     "backend": "npm start --prefix backend",
     "frontend": "npm run dev --prefix frontend",
-    "build": "npm run build --prefix frontend && mkdir -p dist && cp -r frontend/dist/* dist/",
-    "build:full": "npm run build --prefix frontend && mkdir -p dist && cp -r frontend/dist/* dist/ && npm run start",
+    "build": "npm run build --prefix frontend && mkdir -p public && cp -r frontend/dist/* public/",
+    "build:full": "npm run build --prefix frontend && mkdir -p public && cp -r frontend/dist/* public/ && npm run start",
     "test": "concurrently \"npm test --prefix backend\" \"npm test --prefix frontend\"",
     "install-all": "concurrently \"npm install --prefix backend\" \"npm install --prefix frontend\"",
     "postinstall": "cd backend && npm install && cd ../frontend && npm install --legacy-peer-deps"
