--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,8 +12,13 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "src": "/[^.]+",
+      "dest": "/index.html",
+      "status": 200
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json))",
+      "dest": "/$1"
     }
   ]
 }
