--- a/backend/.env.render.example
+++ b/backend/.env.render.example
@@ -4,6 +4,6 @@
 
 NODE_ENV=production
 PORT=5000
-MONGO_URI=your_mongodb_connection_string_here
-JWT_SECRET=your_strong_jwt_secret_here (at least 32 characters)
-CLIENT_URL=https://your-frontend-url.onrender.com
+MONGO_URI=mongodb+srv://chiru:chiru@cluster0.yylyjss.mongodb.net/
+JWT_SECRET=fkyno28dGwFYiHlHY5ekc6i3FbrXUpjf5AV5Eo4moYA=
+CLIENT_URL=https://internprojectfrontend.vercel.app/
