Fix email verification issues and 404 errors. Separate backend and frontend URLs for proper routing. Add query parameter handling for verification success/error messages.

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -10,3 +10,7 @@ services:
         value: production
       - key: PORT
         value: 5000
+      - key: CLIENT_URL
+        value: https://mern-intern-gamma.vercel.app
+      - key: BACKEND_URL
+        value: https://mern-intern-1.onrender.com
